# QA

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  dump.rdb  pyproject.toml
assistant/assistant_core/: assistant.py  bot.py  endpoints.py  main.py  middlewares.py
assistant/config/: settings.py
assistant/data_document/: reader.py
assistant/vector_storage/: storage.py
assistant_app/assistant_core/: assistant.py  bot.py  endpoints.py  main.py  middlewares.py
assistant_app/config/: logger.py
assistant_app/data_document/: reader.py
assistant_app/vector_storage/: storage.py
assistant_core/: assistant.py  bot.py  dependencies.py  endpoints.py  llm_interface.py  main.py  middlewares.py  schemas.py
config/: settings.py
data_document/: reader.py
document_readers/: reader.py
llm/: main.py
qph/: main.py  settings.py
vector_storage/: storage.py
