[project]
name = "qph"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langchain (>=0.3.25,<0.4.0)",
    "faiss-cpu (>=1.11.0,<2.0.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "langchain-community (>=0.3.24,<0.4.0)",
    "pymupdf (>=1.26.0,<2.0.0)",
    "langchain-huggingface (>=0.2.0,<0.3.0)",
    "accelerate (>=1.7.0,<2.0.0)",
    "docx2txt (>=0.9,<0.10)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
